fix joinGroup/group object and start with challenges